--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -27,6 +27,9 @@
   display: flex;
   column-gap: 1.75rem;
   margin: 1.5rem 0;
+  left: 50%;
+  right: 50%;
+  transform: translate(35%, -50%);
 }
 
 .home_socials-link {
