--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,3 +1,9 @@
+.about_img {
+  border-radius: 50%;
+  padding: 1.875rem;
+  width: 250px;
+}
+
 .about_container {
   grid-template-columns: 3fr 9fr;
   column-gap: 1.875rem;
