--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -14,7 +14,7 @@
   background-color: var(--container-color);
   box-shadow: var(--shadow);
   border-radius: var(--border-radius);
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   column-gap: 1.875rem;
   align-items: flex-start;
   position: relative;
@@ -35,6 +35,10 @@
 .about_description {
   margin-bottom: 1rem;
   text-align: justify;
+}
+
+.btn {
+  margin-left: 35%;
 }
 
 .about_skills {
