--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -37,8 +37,17 @@
   text-align: justify;
 }
 
-.btn {
+.btn-about {
   margin-left: 35%;
+  padding: 0.75rem 2rem;
+  line-height: 1;
+  border-radius: 1.875rem;
+  box-shadow: 0 0 1px rgb(0, 0, 0 / 0%);
+  border: 1px solid transparent;
+  color: #fff;
+  display: inline-block;
+  background-color: var(--first-color);
+  font-weight: var(--font-bold);
 }
 
 .about_skills {
