--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,23 @@
     margin-left: 0;
   }
 }
+
+.section {
+  padding: 6rem 0 2rem;
+}
+
+.section_title {
+  font-size: var(--h1-font-size);
+  color: var(--title-color);
+}
+
+.section_subtitle {
+  display: block;
+  font-size: var(--small-font-size);
+  margin-bottom: 4rem;
+}
+
+/* .section_title, */
+.section_subtitle {
+  text-align: center;
+}
